@@ -2,6 +2,7 @@
 -----
 1. Try not to crop radio station logos in favourites.
 2. Fix missing icons from 'Extras' plugins if Material is set as default skin.
+3. Tweak queue toolbar layout.
 
 4.3.3
 -----
